# converter

./: README.md  converter.bat  pyproject.toml  requirements.txt  setup.bat  skills-lock.json
.claude/: settings.local.json
converter/: __init__.py  cli.py  converter.py  utils.py
pdf_converter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
